# tasks-api

./: .gitignore  README.md  pyproject.toml
src/api/: main.py
src/api/routes/: tasks_routes.py
src/db/: models.py  session.py
src/domain/: models.py
src/repositories/: conversions.py  tasks_repository.py
src/tests/: conftest.py  test_tasks.py
